# Turbo2

./: .gitignore  LICENSE  README.md
Turbo2 Application Studio/Turbo.Budget/Turbo.Budget.MVC/: Turbo.Budget.MVC.sln
Turbo2 Application Studio/Turbo.Budget/Turbo.Budget.MockRepository/: Turbo.Budget.MockRepository.csproj  Turbo.Budget.MockRepository.sln
Turbo2 Application Studio/Turbo.Budget/Turbo.Budget.SQLCE/: App.Config  Turbo.Budget.SQLCE.csproj  Turbo.Budget.SQLCE.sdf  Turbo.Budget.SQLCE.sln
Turbo2 Application Studio/Turbo.Budget/Turbo.Budget.SQLCE.Test/: App.Config  Program.cs  Turbo.Budget.SQLCE.Test.csproj  Turbo.Budget.SQLCE.Test.sln
Turbo2 Application Studio/Turbo.Budget/Turbo.Budget.Types/: Turbo.Budget.Types.csproj  Turbo.Budget.Types.sln
Turbo2 Application Studio/TurboApps/: TurboApps.sln
Turbo2 Application Studio/TurboApps/TurboApps/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Turbo2 Application Studio/TurboBudget/Test.TurboBudget.Core/: Test.BatesBudget.Core.csproj  UnitTest1.cs
Turbo2 Application Studio/TurboBudget/Test.TurboBudget.Data/: Test.BatesBudget.Data.csproj
Turbo2 Application Studio/TurboBudget/Test.TurboBudget.Presentation/: Test.BatesBudget.Presentation.csproj  UnitTest1.cs
Turbo2 Application Studio/TurboBudget/TurboBudget/: App.xaml  App.xaml.cs  MainWindow.xaml.cs  TurboBudget.csproj
Turbo2 Application Studio/TurboBudget/TurboBudget.Core/: TurboBudget.Core.csproj
Turbo2 Application Studio/TurboBudget/TurboBudget.Data/: TurboBudget.Data.csproj
Turbo2 Application Studio/TurboBudget/TurboBudget.Presentation/: TurboBudget.Presentation.csproj
Turbo2 Application Studio/TurboBudget/TurboBudget.Types/: TurboBudget.Types.csproj
Turbo2 Application Studio/TurboLib/TurboLib.Data.SQLite/: TurboLib.Data.SQLite.csproj
Turbo2 Application Studio/TurboLib/TurboLib.Presentation/: TurboLib.Presentation.csproj
Turbo2 Application Studio/TurboLib/TurboLib.Presentation.Types/: TurboLib.Presentation.Types.csproj
Turbo2 Game Studio/: Thumbs.db
Turbo2 Game Studio/Apps/MazePreviewAndroidNDK/: .gitignore  settings.gradle
Turbo2 Game Studio/Apps/MazePreviewAndroidNDK/MazePreview/src/main/cpp/: CMakeLists.txt  android_main.cpp  pch.h
Turbo2 Game Studio/Apps/MazePreviewDX12/: MazePreviewDX12.sln  MazePreviewDX12.vcxproj  MazePreviewDX12.vcxproj.filters
Turbo2 Game Studio/Apps/MazePreviewDXTK12/: Game.cpp  Main.cpp  MazePreviewDXTK12.vcxproj  Package.appxmanifest  TestGame.h
Turbo2 Game Studio/Apps/MazePreviewOpenGL/: ISpaceLabyrinthMainWindow.h  SpaceLabyrinthWin32.vcxproj.filters
Turbo2 Game Studio/Games/MazePreview/: MazePreview.cpp  MazePreview.h  MazePreviewGameState.cpp  MazePreviewGameState.h  MazeTest.cpp  MazeTest.h  MazeTestLevel.cpp  MazeTestLevel.h  UserOptions.cpp  UserOptions.h
Turbo2 Game Studio/Games/MazePreviewAndroidNDK/MazePreview/src/main/cpp/: CMakeLists.txt  TeapotGame.cpp  TeapotGame.h  TeapotPlayer.cpp  TeapotPlayer.h  TeapotScene.cpp  TeapotScene.h  android_main.cpp
Turbo2 Game Studio/Games/MazePreviewAndroidNDK/ndk_helper/: CMakeLists.txt
Turbo2 Game Studio/Games/MazePreviewAndroidNDK/turbo/: CMakeLists.txt
Turbo2 Game Studio/Games/MazePreviewDX12/: MazePreviewDX12.vcxproj  MazePreviewDX12.vcxproj.filters  Package.appxmanifest  main.cpp
Turbo2 Game Studio/Games/MazePreviewDXTK12/: Game.h  MazePreviewDXTK12.sln  TestGame.cpp
Turbo2 Game Studio/Games/MazePreviewNDS/: SpaceLabyrinthNDS.cpp  SpaceLabyrinthNDS.h  SpaceLabyrinthNDS.pnproj
Turbo2 Game Studio/Games/MazePreviewOpenGL/: SpaceLabyrinthMainWindow.cpp  SpaceLabyrinthWin32.vcxproj  WinMain.cpp
Turbo2 Game Studio/Games/SpaceLabyrinthDX12/: Package.appxmanifest  SpaceLabyrinthDX12.sln  SpaceLabyrinthDX12.vcxproj  SpaceLabyrinthDX12.vcxproj.filters  SpaceLabyrinthDX12FrameworkView.cpp  SpaceLabyrinthDX12FrameworkView.h  SpaceLabyrinthDX12FrameworkViewSource.cpp  SpaceLabyrinthDX12FrameworkViewSource.h  SpaceLabyrinthDX12Main.cpp  SpaceLabyrinthDX12Main.h  SpaceLabyrinthDX12NavigationControl.cpp  SpaceLabyrinthDX12NavigationControl.h  SpaceLabyrinthDX12NavigationController.cpp  SpaceLabyrinthDX12NavigationController.h  SpaceLabyrinthDX12Platform.cpp  SpaceLabyrinthDX12Platform.h  main.cpp  pch.h
Turbo2 Game Studio/Games/Spacelabyrinth/: CubicMaze.h  ICubicMaze.h  ICubicMazeFactory.h  IMaze.h  IMazeFactory.h  ISpaceLabyrinthFactory.h  ISpaceLabyrinthPlatform.h  ISpaceLabyrinthRenderer.h  OriginalCubicMaze.cpp  OriginalCubicMaze.h  OriginalCubicMazeFactory.cpp  OriginalCubicMazeFactory.h  OriginalMaze.cpp  OriginalMaze.h  OriginalMazeCornerMesh.cpp  OriginalMazeCornerMesh.h  OriginalMazeCornerObject.cpp  OriginalMazeCornerObject.h  OriginalMazeEdgeMesh.cpp  OriginalMazeEdgeMesh.h  OriginalMazeEdgeObject.cpp  OriginalMazeEdgeObject.h  OriginalMazeFactory.cpp  OriginalMazeFactory.h  OriginalMazeSceneBuilder.cpp  OriginalMazeSceneBuilder.h  OriginalMazeSceneObject.cpp  OriginalMazeSceneObject.h  OriginalMazeWallMesh.cpp  OriginalMazeWallMesh.h  OriginalMazeWallObject.cpp  OriginalMazeWallObject.h  SpaceLabyrinth.cpp  SpaceLabyrinth.h  SpaceLabyrinthOriginalLevel.cpp  SpaceLabyrinthOriginalLevel.h  SpaceLabyrinthOriginalScene.cpp  SpaceLabyrinthOriginalScene.h  SpaceLabyrinthPlayer.cpp  SpaceLabyrinthPlayer.h
Turbo2 Game Studio/Games/SpacelabyrinthNDS/: Makefile  SpaceLabyrinthNDS.cpp  SpaceLabyrinthNDS.h  SpaceLabyrinthNDS.pnproj  SpacelabyrinthNDS.elf  SpacelabyrinthNDS.nds  main.cpp
Turbo2 Game Studio/Games/SpacelabyrinthWin32/: SpaceLabyrinthWin32.cpp  SpaceLabyrinthWin32.h  SpaceLabyrinthWin32.sln  SpaceLabyrinthWin32.vcxproj  SpaceLabyrinthWin32.vcxproj.filters  WinMain.cpp  pch.h  (+4 more)
TurboApps/TurboApps/: App.xaml  TurboApps.csproj
TurboApps/TurboApps.Presentation/: TurboApps.Presentation.csproj
TurboApps/TurboApps.Views/: TurboApps.Views.csproj
TurboBudget/: TurboBudget.sln
TurboBudget/Test.TurboBudget.Data/: UnitTest1.cs
TurboBudget/TurboBudget/: MainWindow.xaml
TurboBudget/TurboBudget.Test.Core/: BatesBudget.Test.Core.csproj  UnitTest1.cs
TurboBudget/TurboBudget.Views/: TurboBudget.Views.csproj
TurboLib/: TurboLib.sln
(+495 files in other folders)
